Bug 1752862 - Allow some customization of the GTK kinetic scroll parameters. r=botond

This doesn't change behavior by default, but should allow users to tweak
them and provide feedback as to which scroll speed is better for them.

It seems for some people at least the current speed is too much. The
"pixel" mode I implemented should behave exactly like GNOME web, in
terms of scroll speed.

Differential Revision: https://phabricator.services.mozilla.com/D137472